Co-authored-by: h21andli <h21andli@users.noreply.github.com>

--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,8 @@
             <label class="block pr-5 mb-2 text-zinc-900 font-semibold"
                    for="title">Namn:</label>
             <input type="text"
-                   id="title1"
-                   name="title"
+                   id="friendName"
+                   name="friendName"
                    class="w-full  focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
           </section>
 
@@ -50,8 +50,8 @@
             <label class="block pr-5 mb-2 text-zinc-900 font-semibold"
                    for="title">Intressen:</label>
             <input type="text"
-                   id="intrests"
-                   name="intrests"
+                   id="interests"
+                   name="interests"
                    class="w-full  focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
           </section>
 
