--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
 
 <body>
   <main id="root"
-        class="pt-12 bg-blue-200 min-h-screen">
-    <h1 class="text-center font-serif mb-12 text-6xl text-zinc-800">Digitala mina vänner-boken</h1>
+        class="pt-12 bg-gradient-to-b from-cyan-200 via-pink-200 to-yellow-200 min-h-screen">
+    <h1 class="text-center font-serif mb-12 text-6xl text-zinc-700">Digitala mina vänner-boken</h1>
     <section class="flex gap-10 w-8/12 mx-2 xl:mx-auto ">
       <section class="flex-1 bg-white p-5 rounded-lg drop-shadow-md">
         <h2 class="mb-6 text-center text-3xl text-zinc-700 font-serif underline decoration-solid decoration-zinc-600">Ny vän</h2>
@@ -45,7 +45,7 @@
             <input type="date"
                    id="birthday"
                    name="birthday"
-                   class="w-full focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-4" />
+                   class="w-full focus-within:outline-none focus:border-cyan-400 focus:border-b-2 px-4 py-4" />
           </section>
 
           <section class="mb-2 mt-2 border-b-2">
@@ -57,7 +57,7 @@
             <input type="text"
                    id="interests"
                    name="interests"
-                   class="w-full  focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
+                   class="w-full  focus-within:outline-none focus:border-yellow-400 focus:border-b-2 px-4 py-2" />
           </section>
 
           <section class="mb-2 mt-2 border-b-2">
@@ -69,7 +69,7 @@
             <input type="text"
                    id="favoriteColor"
                    name="favoriteColor"
-                   class="w-full  focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
+                   class="w-full  focus-within:outline-none focus:border-pink-400 focus:border-b-2 px-4 py-2" />
           </section>
 
           <section class="mb-2 mt-2 border-b-2">
@@ -81,7 +81,7 @@
             <input type="text"
                    id="favoriteAnimal"
                    name="favoriteAnimal"
-                   class="w-full focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
+                   class="w-full focus-within:outline-none focus:border-violet-400 focus:border-b-2 px-4 py-2" />
           </section>  
 
           <section class="mb-2 mt-2 border-b-2">
@@ -93,12 +93,12 @@
             <input type="text"
                    id="dreamJob"
                    name="dreamJob"
-                   class="w-full  focus-within:outline-none focus:border-indigo-400 focus:border-b-2 px-4 py-2" />
+                   class="w-full  focus-within:outline-none focus:border-amber-400 focus:border-b-2 px-4 py-2" />
           </section>
 
             <div class="grid">
                 <button name="submitNewFriend"
-                        class="rounded-md hover:bg-blue-300 hover:text-zinc-800 bg-blue-600 text-white px-4 py-1 font-semibold justify-self-center mt-4 drop-shadow-md"
+                        class="rounded-md bg-gradient-to-r from-green-200 to-blue-200 hover:from-pink-200 hover:to-yellow-200 px-4 py-1 font-semibold justify-self-center mt-4 drop-shadow-md"
                         type="submit">
                     Lägg till ny vän
                 </button>
