kommentar och fix

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@ sparas informationen om den nya vännen som ett objekt och dynamiskt upp i lista
 
     <h1 class="text-center font-serif mb-12 text-6xl text-zinc-700">Digitala mina vänner-boken</h1>
     <section class="flex gap-10 w-8/12 mx-2 xl:mx-auto ">
-      <section class="flex-1 bg-white p-5 rounded-lg drop-shadow-md">
+      <section class="flex-1 bg-white p-5 rounded-lg drop-shadow-md h-fit">
         <h2 class="mb-6 text-center text-3xl text-zinc-700 font-serif underline decoration-solid decoration-zinc-600">Ny vän</h2>
         <form id="friendForm"
               name="friendForm">
